# enum-response

./: .gitignore  .travis.yml  Cargo.toml
enum-response/: Cargo.toml
enum-response-derive/: Cargo.toml
enum-response-derive/src/: lib.rs
enum-response-derive/tests/: tests.rs
enum-response-derive/tests/ui/: derive-struct.rs  derive-struct.stderr  reason-ix-on-struct.rs  reason-ix-on-struct.stderr  reason-no-field-at-ix.rs  reason-no-field-at-ix.stderr  update-all-references.sh
enum-response/src/: lib.rs
src/: lib.rs
tests/: tests.rs
tests/ui/: derive-struct.rs  derive-struct.stderr  reason-ix-on-struct.rs  reason-ix-on-struct.stderr  reason-no-field-at-ix.rs  reason-no-field-at-ix.stderr
