[package]
name = "enum-response-derive"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.4", features = ["nightly"] }
syn = "0.14"
quote = "0.6"
enum-response = { path = "../enum-response" }

[dev-dependencies]
compiletest_rs = "0.3"
